--- a/css/main.css
+++ b/css/main.css
@@ -1,1 +1,320 @@
 /* Place CSS styles here */
+
+/* Add a black background color to the top navigation */
+.monday-soap {
+  background-color: #333;
+}
+
+@media (min-width: 481px) {
+  .monday-soap {
+    display: flex;
+    justify-content: center;
+  }
+}
+
+/* Style the links inside the navigation bar */
+.monday-soap a {
+  float: left;
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+/* Change the color of links on hover */
+.monday-soap a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+/* Add an active class to highlight the current page */
+.monday-soap a.active {
+  background-color: #ffffff00;
+  color: white;
+}
+
+/* Hide the link that should open and close the monday-soap on small screens */
+.monday-soap .icon {
+  display: none;
+}
+
+/* When the screen is less than 600 pixels wide, hide all links, except for the first one ("Home"). Show the link that contains should open and close the monday-soap (.icon) */
+@media (max-width: 480px) {
+  .monday-soap {
+    justify-content: space-between;
+  }
+  .monday-soap a:not(:first-child) {display: none;}
+  .monday-soap a.icon {
+    float: right;
+    display: block;
+  }
+}
+
+/* The "responsive" class is added to the monday-soap with JavaScript when the user clicks on the icon. This class makes the monday-soap look good on small screens (display the links vertically instead of horizontally) */
+@media (max-width: 480px) {
+  .monday-soap.responsive {position: relative;}
+  .monday-soap.responsive a.icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .monday-soap.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+}
+
+* {
+  box-sizing: border-box;
+}
+
+.l-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  overflow: hidden;
+  clip: rect(0,0,0,0);
+  white-space: nowrap;
+  -webkit-clip-path: inset(50%);
+  clip-path: inset(50%);
+  border: 0;
+}
+
+body {
+  color: #000;
+  background-color: #ffffff;
+  font-family: "futura-pt", sans-serif;
+  font-weight: 500;
+  font-style: normal;
+  font-size: 16px;
+}
+
+h1 {
+  margin-top: 0;
+  font-size: 3.052rem;
+}
+
+@media (max-width: 480px) {
+  h1 {
+    font-size: 2rem;
+  }
+}
+
+h2 {
+  font-size: 2.441rem;
+}
+
+h3 {
+  font-size: 1.953rem;
+}
+
+h4 {
+  font-size: 1.563rem;
+}
+
+h5 {
+  font-size: 1.25rem;
+}
+
+/* media query for phones */
+@media (max-width: 480px) {
+  body {
+    background-color: rgb(255, 255, 255);
+  }
+}
+
+/* media query for desktop */
+@media (min-width: 768px) {
+  body {
+    background-color: rgb(255, 255, 255);
+  }
+}
+
+label {
+  color: rgb(0, 0, 0);
+}
+
+p {
+  line-height: 1.6;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "futura-pt", sans-serif;
+  font-weight: 500;
+  font-style: normal;
+  text-transform: uppercase;
+}
+
+input,
+textarea {
+  border: 1px solid #c4c3c3;
+  padding: 10px;
+  border-radius: 8px;
+  margin-bottom: 12px;
+  width: 100%;
+}
+
+label {
+  margin-bottom: 8px;
+  display: inline-block;
+}
+
+form {
+  max-width: 500px;
+  display: block;
+  /* width: 80%; */
+  margin-left: auto;
+  margin-right: auto;
+}
+
+ul {
+  text-align: center;
+}
+
+img {
+ width: 100%;
+ height: auto;
+}
+
+h2 {
+  color: rgb(255, 255, 255);
+}
+
+h4 {
+  font-family: "adaptive-mono", monospace;
+  font-weight: 400;
+  font-size: .78rem;
+  font-style: normal;
+  text-align: center;
+  color: #EFE3CE;
+}
+
+p {
+  color: #a52a2a;
+}
+
+nav a,
+.my-button {
+  display: inline-flex;
+  padding: 16px;
+  border: 0px solid white;
+  color: #a52a2a;
+  margin-top: 4px;
+  margin-bottom: 4px;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-size: 20px;
+  transition: all .25s ease;
+  width: auto;
+}
+
+nav a:hover,
+.my-button:hover {
+  color: white;
+  background-color: #a52a2a;
+}
+
+.my-secondary-button {
+  background-color: #00c200;
+  color: #000;
+}
+
+.my-secondary-button:hover {
+  color: #00c200;
+  background-color: #000;
+}
+
+
+/* Lavendar Chicken section */
+.lavendar-chicken-main-wrapper,
+.yellow-pig-main-wrapper {
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+}
+
+.lavendar-chicken-header,
+.yellow-pig-header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-color: #EFE3CE;
+}
+
+@media (max-width: 767px) {
+  .lavendar-chicken-header,
+  .yellow-pig-header {
+    flex-direction: column;
+    gap: 16px;
+    padding-top: 8px;
+    padding-bottom: 8px;
+  }
+}
+
+.lavendar-chicken-featured-wrapper,
+.yellow-pig-featured-wrapper {
+  display: flex;
+  background-color: #a52a2a;
+}
+
+.lavendar-chicken-main,
+.yellow-pig-main {
+  flex: 1;
+  padding-top: 24px;
+  padding-bottom: 24px;
+  width: 80%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.lavendar-chicken-footer,
+.yellow-pig-footer {
+  background-color: #000000
+}
+
+.lavendar-chicken-feature-items,
+.yellow-pig-feature-items {
+  display: flex;
+  gap: 24px;
+}
+
+/* for phone */
+@media (max-width: 767px) {
+  .lavendar-chicken-feature-items,
+  .yellow-pig-feature-items {
+    flex-direction: column;
+  }
+}
+
+.lavendar-chicken-feature-item,
+.yellow-pig-feature-item {
+  background-color: rgba(255, 250, 240, 0)
+}
+
+.night-red-logo {
+  width: 200px;
+  margin-top: -40px;
+  margin-bottom: -40px;
+  margin-right: -30px;
+  transform:rotate(-10deg);
+}
+
+.night-blue-logo {
+  width: 350px;
+  align-self: center
+  ;
+}
+.yellow-pig-logo {
+  width: 350px;
+    align-self: center
+    ;
+}
